# sprintcycle

./: .codecov.yml  .coverage  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG-evolution.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_CHECKLIST.md  DEV_SETUP_GUIDE.md  Dockerfile  GEPA_FIX_MODE.md  LICENSE  Makefile  P0_EVALUATION_REPORT.md  P2_TASKS_COMPLETION_REPORT.md  PHASE2_REPORT.md  PHASE3_REPORT.md  README.md  README_CN.md  README_EN.md  RELEASE_v0.7.7.md  REPORT_error_handling_architecture.md  SKILL.md  SPRINTCYCLE_PRODUCT_TECH_PLAN.md  SprintCycle-产品规划 v0.3.md  SprintCycle-技术架构 v0.4.md  backend.Dockerfile  chorus_split_analysis.md  cli.py  config.yaml  config.yaml.example  coverage.json  deploy.sh  dev-setup.sh  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  (+14 more)
.cursor/: README.md  hooks.json  mcp.json
.cursor/agents/: arch-guardian.md  architect-agent.md  commit-message-agent.md  graph-orchestrator.md  implement-agent.md  it-architect-agent.md  it-commit-message-agent.md  it-implement-agent.md  it-qa-agent.md  it-qa-reviewer.md  it-review-agent.md  it-spec-agent.md  it-team-agent.md  lifecycle-auditor.md  qa-agent.md  qa-reviewer.md  review-agent.md  review-commander.md  spec-agent.md  team-agent.md  team-commander.md  test-risk-reviewer.md
.cursor/commands/: README.md  architect-command.md  ci-fix-loop.md  commit-message-command.md  commit-message.md  fix-arch-imports.md  fix-python-imports.md  implement-command.md  it-architect-command.md  it-commit-message-command.md  it-implement-command.md  it-qa-command.md  it-review-command.md  it-spec-command.md  it-team-command.md  qa-command.md  review-arch.md  review-command.md  (+11 more)
.githooks/: pre-commit
.specify/: init-options.json  integration.json
.sprintcycle-evolution/: execution_log.json
adapters/: __init__.py  chorus_adapter.py
api/: server.py
config/: prd_split_strategy.yaml
core/: __init__.py  chorus_adapter.py  chorus_adapter_v3.py  chorus_adapter_v4.py  config.py  cursor_acp.py  cursor_acp_client.py  engine.py  evolution_engine.py  execution_layer.py  knowledge_base.py  router.py  sprint_chain.py  verifier.py
dashboard/: server.py
demo/: README.md  models.py  requirements.txt  sprintcycle.yaml.bak
deploy/: README.md
docs/: AGENT_GOVERNANCE_PLAN.md  AI_FRAMEWORK_RESEARCH.md  AI_GOVERNANCE.md  API.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_AUDIT_V2.md  ARCHITECTURE_INVARIANTS.md  ARCHITECTURE_SIMPLIFICATION.md  ARCHITECTURE_SIMPLIFICATION_ASSESSMENT.md  ARCHITECTURE_SIMPLIFICATION_ASSESSMENT_20260601.md  AUTO_VERIFICATION_GUIDE.md  CACHE.md  CHANGELOG-evolution.md  CODE_REDUCTION_PHASE2_PLAN.md  CODE_REDUCTION_PHASE2_PLAN_V2.md  CODING_ENGINES_CLAUDE_CURSOR.md  CONFIG_GOVERNANCE_PLAN.md  CURSOR_ARCHITECTURE_ORCHESTRATION.md  CURSOR_OPTIMIZATION_RULES.md  CURSOR_PRODUCTION_FIX_WORKFLOW.md  CURSOR_TEAM_PLAYBOOK.md  DASHBOARD_DEPLOY.md  DEVELOPMENT.md  DI_CONTAINER_MIGRATION_GUIDE.md  DI_REFACTORING_SUMMARY.md  EXTENSION_POINTS.md  EXTENSION_POINTS_SERVICE_MAP.md  FINAL_ARCHITECTURE.md  GOVERNANCE_ENGINEERING.md  GOVERNANCE_EVOLUTION_SANDBOX.md  GOVERNANCE_FACADE.md  GOVERNANCE_GOLDEN.md  GOVERNANCE_HEAVY_CHECKS.md  GOVERNANCE_OVERVIEW.md  GOVERNANCE_SUGGESTION.md  HITL_FINAL_DELIVERY.md  HITL_ROADMAP.md  HOOK_PROTOCOL.md  PACKAGE_LAYOUT.md  (+17 more)
docs-dev/: SprintCycle-产品规划 v0.4.md  SprintCycle-技术架构 v0.3.md  evaluation-report.md  validation-report.json  validation-report.md
domains/: code.yaml  content.yaml  creative.yaml  decision.yaml  product.yaml
examples/: di_container_example.py  di_final_verification.py  evolution_examples.py  gepa_self_evolution_demo.py
frontend/: .env.development.example  .env.production.example  .prettierignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
harness/: chain_checker.py  chain_checker_report.json  interface_checker.py  interface_checker_report.json  smoke_runner.py
models/: __init__.py  knowledge.py  sprint.py  task.py
reports/: evolution_report.md
scripts/: auto_upgrade_verify.py  batch_update_di_imports.py  check-secrets.sh  check.sh  ci-local.sh  deploy.sh  e2e_dashboard_server.py  export_dashboard_openapi.py  import-smoke.sh  install-githooks.sh  rollback.sh  run_auto_verify.sh  run_evolution.sh  test.sh  upgrade.sh  validate_architecture.py
skill/: SKILL.md
sprintcycle/: __init__.py  api.py  autofix.py  benchmark.py  cache.py  chorus.py  cli.py  coding_engine.py  config.py  config_backup.py  credentials.py  diagnostic.py  error_handlers.py  error_helper.py  evolution.py  exceptions.py  five_source.py  health_check.py  hooks.py  llm.py  llm_provider.py  models.py  optimizations.py  optimizations_fixed.py  prd_splitter.py  prompt_sources.py  resource_monitor.py  results.py  reviewer.py  rollback.py  scanner.py  scheduler.py  server.py  server_patch.py  sprint_chain.py  sprint_logger.py  state_manager.py  timeout.py  ui_verifier.py  verifiers.py
tests/: __init__.py  conftest.py  test_agents.py  test_analyzer.py  test_api_contract_consistency.py  test_api_layering_services.py  test_application_protocols.py  test_architecture_imports.py  test_autofix.py  test_autofix_extended.py  test_benchmark.py  test_cache.py  test_cache_backends.py  test_chorus.py  test_chorus_coverage.py  test_chorus_extended.py  test_chorus_properties.py  test_coding_engine.py  test_coding_engines_adapters.py  test_config.py  test_core.py  test_dashboard_config.py  test_diagnostic.py  test_dispatcher.py  test_e2e_evolution.py  test_error_handlers.py  test_error_handling.py  test_error_helper_extended.py  test_evolution_client.py  test_evolution_engine.py  test_evolution_improved.py  test_evolution_integration.py  test_evolution_plan_source.py  test_evolution_rollback_manager.py  test_exceptions_extended.py  test_execution_event_backend_config.py  test_fitness_aggregator.py  test_five_source_extended.py  test_g4_properties.py  test_gepa_engine.py  (+74 more)
utils/: __init__.py  ai.py  logger.py
videos/: record_demo.py
(+1271 files in other folders)
