[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sprintcycle"
version = "0.9.2"
description = "PRD驱动的自我进化敏捷开发框架"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "questionary>=2.0",
    "loguru>=0.7.0",
    "pydantic>=2.0",
    "pluggy>=1.5.0",
    "dynaconf>=3.2.0",
    "diskcache>=5.0.0",
    "tenacity>=8.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
# Web Dashboard 与远程观测（生产部署 / 本地 Docker 默认只需要这一组）
dashboard = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.25.0",
    "watchdog>=4.0.0",
    "PyYAML>=6.0",
]
# 平台增强栈：仅在需要 LangGraph 集成时安装
v2 = [
    "langgraph>=0.2.0",
]
# 完整栈：保留旧命名兼容，等价于 dashboard + v2 + Phoenix 观测
full = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.25.0",
    "watchdog>=4.0.0",
    "PyYAML>=6.0",
    "langgraph>=0.2.0",
    "arize-phoenix>=4.0.0",
]
# Redis 缓存后端（RuntimeConfig cache_backend=redis）
cache-redis = ["redis>=5.0.0"]
# Development dependencies
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.100.0",
    "import-linter>=2.0",
]
# 突变测试（V4.0 §6.5）：不并入默认 dev，按需安装 ``pip install -e ".[mutation]"``；CI 见 workflows/mutation.yml
mutation = [
    "mutmut>=2.4.0",
]

[project.scripts]

[tool.setuptools.packages.find]
include = ["sprintcycle*"]

[tool.setuptools.package-data]
"sprintcycle.dashboard" = ["static/**/*"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "golden: 模型或环境切换时必须保持通过的用例（见 docs/GOVERNANCE_GOLDEN.md）",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.importlinter]
root_package = "sprintcycle"

[[tool.importlinter.contracts]]
name = "API 层不得依赖 dashboard（G4 / L3 最小门禁）"
type = "forbidden"
source_modules = [
    "sprintcycle.api",
]
forbidden_modules = [
    "sprintcycle.dashboard",
]

[[tool.importlinter.contracts]]
name = "编排层不得依赖 dashboard（G4）"
type = "forbidden"
source_modules = [
    "sprintcycle.application.orchestration",
]
forbidden_modules = [
    "sprintcycle.dashboard",
]

[[tool.importlinter.contracts]]
name = "Release plan 层不得依赖 dashboard（G4）"
type = "forbidden"
source_modules = [
    "sprintcycle.application.release_plan",
]
forbidden_modules = [
    "sprintcycle.dashboard",
]

[[tool.importlinter.contracts]]
name = "执行层不得依赖 dashboard（G4）"
type = "forbidden"
source_modules = [
    "sprintcycle.execution",
]
forbidden_modules = [
    "sprintcycle.dashboard",
]
